--- a/UIImagePickerController/UIImagePickerController/Info.plist
+++ b/UIImagePickerController/UIImagePickerController/Info.plist
@@ -41,5 +41,13 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>App需要您的同意,才能访问麦克风</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>App需要您的同意,才能访问相册</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>写入相册</string>
+    <key>NSCameraUsageDescription</key>
+    <string>App需要您的同意,才能访问相机</string>
 </dict>
 </plist>
