--- a/UIImagePickerController/UIImagePickerController/Info.plist
+++ b/UIImagePickerController/UIImagePickerController/Info.plist
@@ -41,13 +41,19 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-    <key>NSMicrophoneUsageDescription</key>
-    <string>App需要您的同意,才能访问麦克风</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>App需要您的同意,才能访问麦克风</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>App需要您的同意,才能访问相册</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>写入相册</string>
+	<key>NSCameraUsageDescription</key>
+	<string>App需要您的同意,才能访问相机</string>
     <key>NSPhotoLibraryUsageDescription</key>
-    <string>App需要您的同意,才能访问相册</string>
-    <key>NSPhotoLibraryAddUsageDescription</key>
-    <string>写入相册</string>
-    <key>NSCameraUsageDescription</key>
-    <string>App需要您的同意,才能访问相机</string>
+    <string>此 App 需要您的同意才能读取媒体资料库</string>
+    
+    <key>NSContactsUsageDescription</key>
+    <string>contactsDesciption</string>
+    
 </dict>
 </plist>
